@@ -75,6 +75,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 26208) Mark directionality of some interlanguage links
 * (bug 26034) Make the "View / Read" tab in content_navigation style tabs remain
   selected when the action is "purge".
+* (bug 14267) Support a MediaWiki:Mainpage-nstab override for the subject namespace
+  tab on the mainpage of a wiki.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
